--- a/src/app/pages/delivery-riders/riders-table/riders-table.component.html
+++ b/src/app/pages/delivery-riders/riders-table/riders-table.component.html
@@ -31,7 +31,7 @@
           <td>{{dg.cnic}}</td>
 
           <td>
-            <i class="bi bi-pencil" (click)="onEditClick(cat)"></i>
+            <i class="bi bi-pencil" (click)="onEditClick(dg)"></i>
             &nbsp;&nbsp;&nbsp;
             <i class="bi bi-trash3" style="color: red;"></i>
           </td>
