--- a/src/app/pages/products/products-list/products-list.component.html
+++ b/src/app/pages/products/products-list/products-list.component.html
@@ -1,12 +1,22 @@
-<div class="container">
-  <h3>Product List</h3>
+<div class="container-fluid mt-3">
+  <div class="row">
+    <div class="col-md-6">
+      <h3>Product List</h3>
+    </div>
+    <div class="col-md-2 offset-4">
+      <button type="button" class="btn btn-primary" (click)="onAddClick()">
+        <i class="bi bi-plus-circle"></i>&nbsp;Add Product
+      </button>
+    </div>
+
+  </div>
   <hr>
   <div class="row">
     <div class="col-md-12">
-      <div class="form-group">
+      <div class="form-group mb-3">
         <input type="text" class="form-control" placeholder="Search">
       </div>
-      <table class="table table-responsive">
+      <table class="table table-responsive table-bordered table-striped">
         <thead>
           <tr>
             <th>Title (English)</th>
