--- a/src/app/pages/config/featured-categories/featured-categories.component.html
+++ b/src/app/pages/config/featured-categories/featured-categories.component.html
@@ -1,60 +1,64 @@
-<form [formGroup]="form" style="width: 100%; margin: 30px 30px;">
-  <div class="row">
-    <div class="form-group col-lg-5">
-      <label for="title">Title</label>
-      <input formControlName="title" type="text" class="form-control" id="title" placeholder="Title">
-      <app-errors [form_control]="f['title']" [isSubmitted]="isFormSubmit"></app-errors>
+<div class="container-fluid">
+
+  <form [formGroup]="form" style="width: 100%; margin: 30px 30px;">
+    <h4>Featured Categories</h4>
+    <div class="row">
+      <div class="form-group col-lg-5">
+        <label for="title">Title</label>
+        <input formControlName="title" type="text" class="form-control" id="title" placeholder="Title">
+        <app-errors [form_control]="f['title']" [isSubmitted]="isFormSubmit"></app-errors>
+
+      </div>
+      <div class="form-group col-lg-5">
+        <label for="imageUrl">Image Url</label>
+        <input formControlName="imageUrl" type="url" class="form-control" id="imageUrl" placeholder="Image Url">
+        <app-errors [form_control]="f['imageUrl']" [isSubmitted]="isFormSubmit"></app-errors>
+      </div>
+      <div class="form-group col-lg-2 mt-4">
+        <div class="form-check">
+          <input formControlName="package" type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">Package</label>
+        </div>
+      </div>
 
     </div>
-    <div class="form-group col-lg-5">
-      <label for="imageUrl">Image Url</label>
-      <input formControlName="imageUrl" type="url" class="form-control" id="imageUrl" placeholder="Image Url">
-      <app-errors [form_control]="f['imageUrl']" [isSubmitted]="isFormSubmit"></app-errors>
+
+    <!-- Sub Category Form -->
+    <div [formGroup]="subForm" class="row mt-3">
+
+      <div class="form-group col-lg-4">
+        <label class="mb-1" for="title">Sub Category</label>
+        <input formControlName="title" type="text" class="form-control" id="Sub Category" placeholder="Sub Category">
+        <app-errors [form_control]="sf['title']" [isSubmitted]="isSubCategoryFormSubmit"></app-errors>
+
+      </div>
+
+      <div class="form-group col-lg-2 mt-4 offset-1">
+        <button type="button" class="btn btn-primary" (click)="onSubmitSubForm()">
+          <i class="bi bi-plus-circle"></i>
+          Add
+        </button>
+      </div>
+
     </div>
-    <div class="form-group col-lg-2 mt-4">
-      <div class="form-check">
-        <input formControlName="package" type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Package</label>
+    <!-- End of Sub Category form -->
+
+    <!-- Sub Category Table -->
+    <div class="row">
+      <div class="form-group col-lg-6 mt-2">
+        <app-sub-category-table [sub_categories]="subCat" (deleteSubCategory)="deleteSubCategory($event)">
+        </app-sub-category-table>
       </div>
     </div>
 
-  </div>
 
-  <!-- Sub Category Form -->
-  <div [formGroup]="subForm" class="row mt-3">
+    <button type="submit" class="btn btn-primary btn-lg mt-3" (click)="onSubmit()">
+      <i class="bi bi-save"></i>&nbsp;{{buttonTitle}}
+    </button>
 
-    <div class="form-group col-lg-4">
-      <label class="mb-1" for="title">Sub Category</label>
-      <input formControlName="title" type="text" class="form-control" id="Sub Category" placeholder="Sub Category">
-      <app-errors [form_control]="sf['title']" [isSubmitted]="isSubCategoryFormSubmit"></app-errors>
+  </form>
 
-    </div>
+  <hr class="mt-2 mb-2">
 
-    <div class="form-group col-lg-2 mt-4 offset-1">
-      <button type="button" class="btn btn-primary" (click)="onSubmitSubForm()">
-        <i class="bi bi-plus-circle"></i>
-        Add
-      </button>
-    </div>
-
-  </div>
-  <!-- End of Sub Category form -->
-
-  <!-- Sub Category Table -->
-  <div class="row">
-    <div class="form-group col-lg-6 mt-2">
-      <app-sub-category-table [sub_categories]="subCat" (deleteSubCategory)="deleteSubCategory($event)">
-      </app-sub-category-table>
-    </div>
-  </div>
-
-
-  <button type="submit" class="btn btn-primary btn-lg mt-3" (click)="onSubmit()">
-    <i class="bi bi-save"></i>&nbsp;{{buttonTitle}}
-  </button>
-
-</form>
-
-<hr class="mt-2 mb-2">
-
-<app-category-table (editFeatured)="editClick($event)"></app-category-table>
+  <app-category-table (editFeatured)="editClick($event)"></app-category-table>
+</div>
