--- a/src/app/pages/config/locations/locations.component.html
+++ b/src/app/pages/config/locations/locations.component.html
@@ -1,7 +1,7 @@
-<div>
+<div class="container-fluid">
 
-  <h3 class="mx-3 mt-3">Locations</h3>
   <form [formGroup]="form" style="width: 100%; margin: 30px 30px;">
+    <h4>Locations</h4>
     <div class="row">
       <div class="form-group col-lg-10">
         <label for="title">Title</label>
@@ -18,8 +18,8 @@
     </div>
 
   </form>
+
+  <hr class="mt-3 mb-3">
+
+  <app-location-table (editLocation)="editClick($event)"></app-location-table>
 </div>
-
-<hr class="mt-3 mb-3">
-
-<app-location-table (editLocation)="editClick($event)"></app-location-table>
