--- a/src/app/pages/config/slider/slider.component.html
+++ b/src/app/pages/config/slider/slider.component.html
@@ -1,30 +1,35 @@
-<form [formGroup]="form" style=" width: 100%; margin: 30px 30px;">
-  <div class="row">
-    <!-- Title -->
-    <div class="form-group col-lg-5">
-      <label for="title">Title</label>
-      <input formControlName="title" type="text" class="form-control" id="title" placeholder="Title">
-      <app-errors [form_control]="f['title']" [isSubmitted]="isFormSubmit"></app-errors>
+<div class="container-fluid">
+
+  <form [formGroup]="form" style=" width: 100%; margin: 30px 30px;">
+    <h4 class="mt-3">Slider
+    </h4>
+    <div class="row">
+      <!-- Title -->
+      <div class="form-group col-lg-5">
+        <label for="title">Title</label>
+        <input formControlName="title" type="text" class="form-control" id="title" placeholder="Title">
+        <app-errors [form_control]="f['title']" [isSubmitted]="isFormSubmit"></app-errors>
+      </div>
+
+      <!-- Image Url -->
+      <div class="form-group col-lg-5">
+        <label for="imageUrl">Image Url</label>
+        <input formControlName="imageUrl" type="url" class="form-control" id="imageUrl" placeholder="Image Url">
+        <app-errors [form_control]="f['imageUrl']" [isSubmitted]="isFormSubmit"></app-errors>
+
+      </div>
+
+      <!-- Save Button -->
+      <div class="form-group col-lg-2 mt-4">
+        <button type="submit" class="btn btn-primary" (click)="onSubmit()"><i class="bi bi-save"></i>&nbsp;
+          {{buttonTitle}} </button>
+      </div>
+
     </div>
 
-    <!-- Image Url -->
-    <div class="form-group col-lg-5">
-      <label for="imageUrl">Image Url</label>
-      <input formControlName="imageUrl" type="url" class="form-control" id="imageUrl" placeholder="Image Url">
-      <app-errors [form_control]="f['imageUrl']" [isSubmitted]="isFormSubmit"></app-errors>
+  </form>
 
-    </div>
+  <hr class="mt-3 mb-3">
 
-    <!-- Save Button -->
-    <div class="form-group col-lg-2 mt-4">
-      <button type="submit" class="btn btn-primary" (click)="onSubmit()"><i class="bi bi-save"></i>&nbsp;
-        {{buttonTitle}} </button>
-    </div>
-
-  </div>
-
-</form>
-
-<hr class="mt-3 mb-3">
-
-<app-slider-table (editSlider)="editClick($event)"></app-slider-table>
+  <app-slider-table (editSlider)="editClick($event)"></app-slider-table>
+</div>
