--- a/src/app/pages/delivery-riders/riders/riders.component.html
+++ b/src/app/pages/delivery-riders/riders/riders.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
     <h4 class="text mb-3 mt-2">Delivery Guy Form</h4>
     <form [formGroup]="form">
         <div class="row">
@@ -37,8 +37,6 @@
     <button type="submit" class="btn btn-primary mt-2 offset-5" (click)="onSubmit()">
         <i class="bi bi-save"></i>&nbsp;
         {{buttonTitle}} </button>
+    <hr>
+    <app-riders-table (editdeliveryGuy)="onEditClick($event)"></app-riders-table>
 </div>
-
-<hr>
-
-<app-riders-table (editdeliveryGuy)="onEditClick($event)"></app-riders-table>
