--- a/src/app/pages/product-packages/product-packages-form/product-packages-form.component.html
+++ b/src/app/pages/product-packages/product-packages-form/product-packages-form.component.html
@@ -1,3 +1,5 @@
-<p>
-  product-packages-form works!
-</p>
+<div class="container-fluid">
+
+  <hr>
+  <app-product-packages-table></app-product-packages-table>
+</div>
