--- a/src/app/pages/product-packages/product-weight-table/product-weight-table.component.html
+++ b/src/app/pages/product-packages/product-weight-table/product-weight-table.component.html
@@ -1,3 +1,30 @@
-<p>
-  product-weight-table works!
-</p>
+<div class="table-responsive">
+  <table class="table table-striped overflow-auto">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Product</th>
+        <th scope="col">Weight</th>
+        <th scope="col">Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <div *ngIf="_packageProducts && _packageProducts.length === 0; else tableData">
+        <h5>no data</h5>
+      </div>
+      <ng-template #tableData>
+        <tr *ngFor="let pp of _packageProducts; index as i">
+          <th scope="row">{{pp.id}}</th>
+          <td>
+            {{ pp.product }}
+          </td>
+          <td>
+            {{ pp.weight }}
+          </td>
+          <td> &nbsp;&nbsp;<i class="bi bi-trash3" (click)="onDeleteClick(sc?.id)" style="color: red;"></i>
+          </td>
+        </tr>
+      </ng-template>
+    </tbody>
+  </table>
+</div>
