--- a/src/app/pages/product-packages/product-weight-table/product-weight-table.component.html
+++ b/src/app/pages/product-packages/product-weight-table/product-weight-table.component.html
@@ -16,12 +16,12 @@
         <tr *ngFor="let pp of _packageProducts; index as i">
           <th scope="row">{{pp.id}}</th>
           <td>
-            {{ pp.product }}
+            {{ pp.productID }}
           </td>
           <td>
             {{ pp.weight }}
           </td>
-          <td> &nbsp;&nbsp;<i class="bi bi-trash3" (click)="onDeleteClick(sc?.id)" style="color: red;"></i>
+          <td> &nbsp;&nbsp;<i class="bi bi-trash3" (click)="onDeleteClick(pp?.id)" style="color: red;"></i>
           </td>
         </tr>
       </ng-template>
