package Product ID and Edit fixed

--- a/src/app/pages/product-packages/product-packages-form/product-packages-form.component.html
+++ b/src/app/pages/product-packages/product-packages-form/product-packages-form.component.html
@@ -58,5 +58,5 @@
   </form>
 
   <hr>
-  <app-product-packages-table></app-product-packages-table>
+  <app-product-packages-table (editPackage)="editClick($event)"></app-product-packages-table>
 </div>
