--- a/src/app/layout/side-bar/side-bar.component.html
+++ b/src/app/layout/side-bar/side-bar.component.html
@@ -90,6 +90,10 @@
                 <a href="/products/update-list"
                   class="link-body-emphasis d-inline-flex text-decoration-none rounded">Update price</a>
               </li>
+              <li>
+                <a href="/products/stock-in" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Stock
+                  In</a>
+              </li>
 
             </ul>
           </div>
