--- a/src/app/pages/products/stock-in/stock-in.component.html
+++ b/src/app/pages/products/stock-in/stock-in.component.html
@@ -20,7 +20,6 @@
       </div>
 
       <div class="form-group col-lg-3">
-
         <label class="mb-1" for="price">Total Price</label>
         <input formControlName="totalPrice" type="number" class="form-control" id="price" placeholder="Total Price">
       </div>
@@ -32,7 +31,11 @@
         </button>
       </div>
 
-
     </div>
   </form>
+
+  <app-stock-in-table [stockData]="stockData" (deleteStock)="deleteStock($event)"></app-stock-in-table>
+
+  <button type="submit" (click)="onSave()" class="btn btn-primary btn-lg offset-10 mt-3"><i
+      class="bi bi-save"></i>&nbsp;Save</button>
 </div>
