--- a/src/app/pages/products/common/stock-in-table/stock-in-table.component.html
+++ b/src/app/pages/products/common/stock-in-table/stock-in-table.component.html
@@ -9,6 +9,7 @@
           <tr>
             <th>ID</th>
             <th>Product</th>
+            <th>Unit Price</th>
             <th>Quantity</th>
             <th>Total Price</th>
             <th>Actions</th>
@@ -18,6 +19,7 @@
           <tr *ngFor="let sd of stockData">
             <td>{{sd.id}}</td>
             <td>{{sd.productID|productPipe}}</td>
+            <td> {{sd.unitPrice | currency}} </td>
             <td>{{sd.quantity}}</td>
             <td>{{sd.totalPrice |currency}}</td>
             <td><i class="bi bi-trash3" style="color: red;" (click)="onDeleteClick(sd.id)"></i>
