--- a/src/app/pages/products/stock-in/stock-in.component.html
+++ b/src/app/pages/products/stock-in/stock-in.component.html
@@ -12,19 +12,27 @@
         <app-errors [form_control]="f['productID']" [isSubmitted]="isFormSubmit"></app-errors>
       </div>
 
-      <div class="form-group col-lg-3">
+
+      <div class="form-group col-lg-2">
+        <label class="mb-1" for="quantity">Unit Price</label>
+        <input formControlName="unitPrice" type="number" min="0" class="form-control" id="info" placeholder="UnitPrice"
+          (change)="calcTotalPrice()" (keyup)="calcTotalPrice()">
+        <app-errors [form_control]="f['unitPrice']" [isSubmitted]="isFormSubmit"></app-errors>
+      </div>
+
+      <div class="form-group col-lg-2">
         <label class="mb-1" for="quantity">Quantity</label>
         <input formControlName="quantity" type="number" min="1" class="form-control" id="info" placeholder="Quantity"
-          (change)="changeQuantity()" (keyup)="changeQuantity()">
+          (change)="calcTotalPrice()" (keypress)="calcTotalPrice()">
         <app-errors [form_control]="f['quantity']" [isSubmitted]="isFormSubmit"></app-errors>
       </div>
 
-      <div class="form-group col-lg-3">
+      <div class="form-group col-lg-2">
         <label class="mb-1" for="price">Total Price</label>
         <input formControlName="totalPrice" type="number" class="form-control" id="price" placeholder="Total Price">
       </div>
 
-      <div class="form-group col-lg-3 mt-4 ">
+      <div class="form-group col-lg-2 mt-4 ">
         <button type="button" class="btn btn-primary" (click)="addStock()">
           <i class="bi bi-plus-circle"></i>
           Add
