--- a/src/app/layout/side-bar/side-bar.component.html
+++ b/src/app/layout/side-bar/side-bar.component.html
@@ -94,6 +94,11 @@
                 <a href="/products/stock-in" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Stock
                   In</a>
               </li>
+              <li>
+                <a href="/products/stock-out"
+                  class="link-body-emphasis d-inline-flex text-decoration-none rounded">Stock
+                  Out</a>
+              </li>
 
             </ul>
           </div>
